--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modulesls
+/node_moduels
 /.pnp
 .pnp.js
 package-lock.json
