--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,11 @@
     "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "mongoose": "^6.0.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
