--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "-": "^0.0.1",
     "@material-ui/core": "^4.12.3",
@@ -21,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \" cd ../backend && npm run watch\" \"npm run start\" "
+    "dev": "concurrently \" cd ../flask-server && python3 server.py\" \"npm run start\" ",
+    "dev2": "concurrently \" cd ../backend && npm run watch\" \"npm run start\" "
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:3001"
+  }
 }
