Add bcrypt and JWT to secure user password and allow auth processes

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://admin1:user123@cluster0.kfraz.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+USERSECRET=K1V9XbB^VZxGb8wkP@^XEt$9RGeSP
