Install bcrypt, jsonwebtoken

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon server.js",
     "watch": "nodemon --ext js,pug --ignore public"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-livereload": "^0.6.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -14,6 +15,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.2",
     "morgan": "~1.9.1"
   },
