--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -13,6 +13,7 @@ dnspython==2.1.0
 entrypoints==0.3
 eventlet==0.32.0
 Flask==2.0.2
+Flask-PyMongo==2.3.0
 Flask-SocketIO==5.1.1
 gevent==21.8.0
 greenlet==1.1.2
@@ -42,9 +43,11 @@ prometheus-client==0.11.0
 prompt-toolkit==3.0.20
 pycparser==2.20
 Pygments==2.10.0
+pymongo==3.12.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
+python-decouple==3.5
 python-engineio==4.2.1
 python-socketio==5.4.0
 pywin32==302
