--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mobx-persist": "^0.4.1",
     "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
